<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>StationDialog</class>
 <widget class="QDialog" name="StationDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>341</width>
    <height>404</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Station Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" colspan="3">
    <widget class="QLabel" name="stationLabel">
     <property name="font">
      <font>
       <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Station</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </item>
   <item row="1" column="0" colspan="3">
    <widget class="QLabel" name="iconLabel">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>320</width>
       <height>212</height>
      </size>
     </property>
     <property name="text">
      <string>Icon</string>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </item>
   <item row="2" column="0" colspan="3">
    <widget class="QLabel" name="descriptionLabel">
     <property name="text">
      <string>Description</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="slotLabel">
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
      <pixmap resource="../res/lugdulov.qrc">:/res/slot.png</pixmap>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="bikeLabel">
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
      <pixmap resource="../res/lugdulov.qrc">:/res/bike.png</pixmap>
     </property>
    </widget>
   </item>
   <item row="5" column="0" colspan="3">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="gmapButton">
       <property name="text">
        <string>Gmap</string>
       </property>
       <property name="icon">
        <iconset resource="../res/lugdulov.qrc">
         <normaloff>:/res/google-maps.png</normaloff>:/res/google-maps.png</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="velovButton">
       <property name="text">
        <string>Velo'v</string>
       </property>
       <property name="icon">
        <iconset resource="../res/lugdulov.qrc">
         <normaloff>:/res/icon.png</normaloff>:/res/icon.png</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="bookmarkButton">
       <property name="text">
        <string>Bookmark</string>
       </property>
       <property name="icon">
        <iconset resource="../res/lugdulov.qrc">
         <normaloff>:/res/favorites.png</normaloff>:/res/favorites.png</iconset>
       </property>
       <property name="checkable">
        <bool>true</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item row="3" column="1">
    <widget class="QProgressBar" name="slotsProgressBar">
     <property name="value">
      <number>24</number>
     </property>
     <property name="format">
      <string>%v/%m</string>
     </property>
    </widget>
   </item>
   <item row="4" column="1">
    <widget class="QProgressBar" name="bikeProgressBar">
     <property name="value">
      <number>24</number>
     </property>
     <property name="format">
      <string>%v/%m</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../res/lugdulov.qrc"/>
 </resources>
 <connections/>
</ui>
